feat: add common room and live adding room

--- a/src/components/room/room.css
+++ b/src/components/room/room.css
@@ -7,3 +7,18 @@ p{
     background-color:red;
     white-space: normal;
 }
+
+.sendArea{
+    display: flex;
+    flex-direction: row;
+}
+
+.formMessage {
+    flex: 1 0 70%;
+}
+
+.MuiButtonBase-root.MuiFab-root.sendButton.MuiFab-primary.MuiFab-sizeMedium {
+    margin-top: 9px;
+    margin-left: 10px;
+    outline: none;
+}
