--- a/src/components/chatBoard/chatBoard.css
+++ b/src/components/chatBoard/chatBoard.css
@@ -2,26 +2,17 @@
     margin-left: 10px;
 }
 
-.MuiButtonBase-root.MuiFab-root.MuiFab-primary.MuiFab-sizeSmall {
-    outline: none;
-}
-
 .MuiButtonBase-root.MuiIconButton-root.deleteButton {
-    /*visibility: hidden;*/
     outline: none;
 }
 
-.list-group-item.list-group-item-action:hover .MuiButtonBase-root.MuiIconButton-root.deleteButton {
-    visibility: visible;
-    outline: none;
-}
-
-/*.list-group-item {*/
-/*    padding: 0 15px 0 0;*/
-/*}*/
 
 .roomElement {
+    display: flex;
     width: 100%;
+    justify-content: space-between;
     align-items: center;
+    flex-wrap: nowrap;
     min-height: 73px;
+
 }
