feat: move navbar to components

--- a/src/components/chatBoard/chatBoard.css
+++ b/src/components/chatBoard/chatBoard.css
@@ -6,6 +6,10 @@
     outline: none;
 }
 
+.MuiButtonBase-root.MuiIconButton-root.deleteButton {
+    outline: none;
+}
+
 .roomElement {
     display: flex;
     width: 100%;
